<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">七牛实验室</string>
    <string name="about_app">关于</string>
    <string name="version_number">版本: </string>
    <string name="support_qq">技术支持QQ</string>
    <string name="support_qq_id">2037014430</string>
    <string name="github">项目地址</string>
    <string name="github_address">https://github.com/qiniudemo/qiniu-lab-android</string>
    <string name="action_refresh">刷新播放列表</string>
    <string name="qiniu_quick_start">快速入门</string>
    <string name="qiniu_simple_upload">常规上传</string>
    <string name="qiniu_advanced_upload">高级上传</string>
    <string name="qiniu_audio_video_play">音视频播放</string>
    <string name="qiniu_system_capture">系统拍摄</string>
    <string name="qiniu_video_play_use_videoview">视频播放(VideoView)</string>
    <string name="qiniu_video_play_use_pldplayer">视频播放(PLDPlayer)</string>

    <string-array name="qiniu_quick_start_demo">
        <item>图片上传与展示</item>
        <item>视频上传与播放</item>
    </string-array>
    <string-array name="qiniu_simple_upload_values">
        <item>无Key文件上传</item>
        <item>有Key文件上传</item>
        <item>使用SaveKey作为文件名</item>
        <item>使用扩展参数作为SaveKey</item>
        <item>使用ReturnBody自定义返回内容</item>
        <item>文件同名(Key相同)覆盖上传</item>
        <item>限制文件上传大小</item>
        <item>限制文件上传类型</item>
        <item>指定上传文件的MimeType</item>
        <item>启用上传文件的CRC32内容校验</item>
        <item>使用EndUser标注终端</item>
    </string-array>
    <string-array name="qiniu_advanced_upload_values">
        <item>无Key大文件断点续传</item>
        <item>有Key大文件断点续传</item>
        <item>回调上传-URL参数格式</item>
        <item>回调上传-JSON参数格式</item>
    </string-array>
    <string-array name="qiniu_image_view">
        <item>基本图片浏览(ImageView)</item>
    </string-array>
    <string-array name="qiniu_video_play">
        <item>视频播放(VideoView)</item>
        <item>视频播放(PLDPlayer)</item>
    </string-array>
    <string-array name="qiniu_system_capture">
        <item>拍摄照片</item>
        <item>拍摄视频</item>
    </string-array>

    <string name="qiniu_activity_quick_start_image_upload">图片上传与展示</string>
    <string name="qiniu_activity_quick_start_audio_upload">音频上传与播放</string>
    <string name="qiniu_activity_quick_start_video_upload">视频上传与播放</string>
    <string name="qiniu_activity_simple_upload_without_key">无Key文件上传</string>
    <string name="qiniu_activity_simple_upload_with_key">有Key文件上传</string>
    <string name="qiniu_activity_simple_upload_use_save_key">使用SaveKey作为文件名</string>
    <string name="qiniu_activity_simple_upload_use_save_key_from_xparam">使用扩展参数作为SaveKey</string>
    <string name="qiniu_activity_simple_upload_use_return_body">使用ReturnBody自定义返回内容</string>
    <string name="qiniu_activity_simple_upload_overwrite_existing_file">文件同名(Key相同)覆盖上传</string>
    <string name="qiniu_activity_simple_upload_use_fsize_limit">限制文件上传大小</string>
    <string name="qiniu_activity_simple_upload_use_mime_limit">限制文件上传类型</string>
    <string name="qiniu_activity_simple_upload_with_mime_type">指定上传文件的MimeType</string>
    <string name="qiniu_activity_simple_upload_enable_crc32_check">启用上传文件的CRC32内容校验</string>
    <string name="qiniu_activity_simple_upload_use_enduser">使用EndUser标注终端</string>
    <string name="qiniu_activity_resumable_upload_without_key">无Key大文件断点续传</string>
    <string name="qiniu_activity_resumable_upload_with_key">有Key大文件断点续传</string>
    <string name="qiniu_activity_callback_upload_with_key_in_url_format">回调上传-URL参数格式</string>
    <string name="qiniu_activity_callback_upload_with_key_in_json_format">回调上传-JSON参数格式</string>
    <string name="qiniu_upload_token">上传凭证</string>
    <string name="qiniu_upload_file">上传文件</string>
    <string name="qiniu_select_file">选择</string>
    <string name="qiniu_file_key">文件名(Key)</string>
    <string name="qiniu_upload_crc32_check">启用文件内容Crc32校验</string>
    <string name="qiniu_file_mimetype">MimeType</string>
    <string name="qiniu_xparam">扩展参数</string>
    <string name="qiniu_xparam_as_savekey">扩展参数(作为SaveKey)</string>
    <string name="qiniu_x_saveKeyEx_hint">x:saveKeyEx</string>
    <string name="qiniu_x_exParam1_hint">x:exParam1</string>
    <string name="qiniu_x_exParam2_hint">x:exParam2</string>
    <string name="qiniu_x_exParam3_hint">x:exParam3</string>
    <string name="qiniu_return_body_type">ReturnBody类型</string>
    <string name="qiniu_upload">上传</string>
    <string name="qiniu_cancel">暂停</string>
    <string name="qiniu_select_upload_file">选择文件:</string>
    <string name="qiniu_get_upload_token">申请凭证:</string>
    <string name="qiniu_upload_response">上传回复:</string>
    <string name="qiniu_get_upload_token_failed">申请上传凭证失败!</string>
    <string name="qiniu_get_upload_file_failed">选择上传文件失败!</string>
    <string name="qiniu_specify_the_file_key">请指定文件的key!</string>
    <string name="qiniu_upload_file_failed">上传文件失败！</string>
    <string name="qiniu_upload_file_response_parse_error">上传回复解析错误!</string>
    <string name="qiniu_create_progress_folder_failed">创建本地进度文件夹失败!</string>
    <string name="qiniu_video_play">视频播放</string>
    <string name="qiniu_get_public_video_playlist_failed">获取公开视频播放列表失败!</string>
    <string name="qiniu_image_view">图片浏览</string>
    <string name="check_pfop_result">查询转码结果</string>
    <string name="load_video1">加载视频1</string>
    <string name="load_video2">加载视频2</string>
    <string name="title_activity_capture_image">CaptureImageActivity</string>

    <string name="capture_image">拍摄照片</string>
    <string name="capture_video">拍摄视频</string>
</resources>