<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    tools:context="com.qiniu.qiniulab.activity.capture.CaptureVideoActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/block_vertical_margin"
        android:layout_marginTop="@dimen/block_vertical_margin"
        android:background="@drawable/select_button_selector"
        android:onClick="captureVideo"
        android:text="@string/capture_video"
        android:textColor="#fff"></Button>

    <Button
        android:id="@+id/capture_video_upload_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/block_vertical_margin"
        android:layout_marginTop="@dimen/block_vertical_margin"
        android:background="@drawable/action_button_selector"
        android:onClick="uploadFile"
        android:text="@string/qiniu_upload"
        android:textColor="#fff" />

    <LinearLayout
        android:id="@+id/capture_video_upload_status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/block_vertical_margin"
        android:layout_marginTop="@dimen/block_vertical_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/capture_video_upload_speed_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/capture_video_upload_file_length_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/capture_video_upload_speed_textview" />

            <TextView
                android:id="@+id/capture_video_upload_percentage_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/capture_video_upload_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/capture_video_file_path_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/capture_video_pili_videoview_fixed_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.pili.pldroid.player.widget.VideoView
                android:id="@+id/capture_video_play_pldplayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/capture_video_pid_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/capture_video_query_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="queryPfopResultButton"
                android:text="@string/check_pfop_result" />

            <Button
                android:id="@+id/capture_load_video_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loadVideo"
                android:text="@string/load_video1"
                android:visibility="invisible" />

            <Button
                android:id="@+id/capture_load_video_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loadVideo"
                android:text="@string/load_video2"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/capture_video1_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/capture_video2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
